# arm_vcpu

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  help.html  rust-toolchain.toml  search-index.js  settings.html  src-files.js
.github/: config.json
.github/workflows/: check.yml  ci.yml  test.yml
.qoder/repowiki/zh/content/: 快速入门.md  故障排除与调试.md  贡献指南.md  项目概述.md
.qoder/repowiki/zh/content/API参考/: API参考.md  VCPU管理API.md  每CPU管理API.md  辅助功能API.md
.qoder/repowiki/zh/content/功能详解/: SMC与PSCI支持.md  VCPU执行控制.md  功能详解.md
.qoder/repowiki/zh/content/功能详解/异常与中断处理/: 同步异常处理.md  异常与中断处理.md  异步异常与中断分发.md
.qoder/repowiki/zh/content/扩展与定制/: 中断处理定制.md  扩展与定制.md  硬件抽象层(HAL)扩展.md
.qoder/repowiki/zh/content/架构设计/: 架构设计.md  模块职责划分.md
.qoder/repowiki/zh/content/架构设计/数据流与控制流/: VM入口与出口流程.md  异常处理数据流.md  数据流与控制流.md
.qoder/repowiki/zh/content/架构设计/设计模式与范式/: 裸函数与底层控制.md  设计模式与范式.md  零成本抽象与no_std优化.md  静态分发与HAL集成.md
.qoder/repowiki/zh/content/核心概念/: VCPU生命周期.md  上下文管理.md  异常处理机制.md  核心概念.md
.qoder/repowiki/zh/meta/: repowiki-metadata.json
arm_vcpu/: all.html  fn.has_hardware_support.html  index.html  sidebar-items.js  struct.Aarch64PerCpu.html  struct.Aarch64VCpu.html  struct.Aarch64VCpuCreateConfig.html  struct.Aarch64VCpuSetupConfig.html  type.AxArchVCpuConfig.html  type.TrapFrame.html
arm_vcpu/vcpu/: struct.Aarch64VCpuSetupConfig.html  type.AxArchVCpuConfig.html
scripts/: run_tests.sh
search.desc/arm_vcpu/: arm_vcpu-desc-0-.js
src/: context_frame.rs  exception.S  exception.rs  exception_utils.rs  exit.rs  irq.rs  lib.rs  pcpu.rs  registers.rs  sync.rs  system_registers.rs  trap.S  vcpu.rs
src/arm_vcpu/: context_frame.rs.html  exception.rs.html  exception_utils.rs.html  lib.rs.html  pcpu.rs.html  smc.rs.html  vcpu.rs.html
src/gic/: mod.rs
src/sysreg/: cntp_ctl_el0.rs  cntp_tval_el0.rs  cntpct_el0.rs  mod.rs
trait.impl/axvcpu/arch_vcpu/: trait.AxArchVCpu.js
trait.impl/axvcpu/percpu/: trait.AxArchPerCpu.js
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/default/: trait.Default.js
trait.impl/core/fmt/: trait.Debug.js
trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
