[package]
authors = [
  "KeYang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
  "ShiMei Tang <shimei820@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
  "周睿 <zrufo747@outlook.com>",
]
categories = ["embedded", "no-std"]
description = "Aarch64 VCPU implementation for Arceos Hypervisor"
edition = "2024"
keywords = ["hypervisor", "aarch64", "vcpu"]
license = "MIT OR Apache-2.0"
name = "arm_vcpu"
repository = "https://github.com/arceos-hypervisor/arm_vcpu"
version = "0.1.1"

[dependencies]
aarch64-cpu = "11.0"
log = "0.4"
numeric-enum-macro = "0.2"
spin = "0.10"

axerrno = "0.1.0"
axvm-types.workspace = true
percpu = {version = "0.2.0", features = ["arm-el2"]}
