[package]
authors = [
  "KeYang Hu <keyang.hu@qq.com>",
  "Mingxian Su <aarkegz@gmail.com>",
  "ShiMei Tang <shimei820@gmail.com>",
  "DeBin Luo <luodeb@outlook.com>",
  "周睿 <zrufo747@outlook.com>",
]
categories = ["embedded", "no-std"]
description = "Aarch64 VCPU implementation for Arceos Hypervisor"
edition = "2024"
keywords = ["hypervisor", "aarch64", "vcpu"]
license = "MIT OR Apache-2.0"
name = "arm_vcpu"
repository = "https://github.com/arceos-hypervisor/arm_vcpu"
version = "0.1.1"

[dependencies]
log = "0.4"
spin = "0.10"

aarch64-cpu = "11.0"
numeric-enum-macro = "0.2"

axerrno = "0.2.0"
percpu = {version = "0.2.0", features = ["arm-el2"]}

axaddrspace = "0.2"
axdevice_base = "0.1.0"
axvcpu = "0.1.2"
axvisor_api = "0.2.0"

[patch.crates-io]
axvcpu = { git = "https://github.com/arceos-hypervisor/axvcpu", branch = "aar-master" }
axvisor_api = { git = "https://github.com/arceos-hypervisor/axvisor_api", branch = "aar-master" }
axaddrspace = { git = "https://github.com/arceos-hypervisor/axaddrspace", branch = "aar-master" }
axdevice_base = { git = "https://github.com/arceos-hypervisor/axdevice_crates", branch = "aar-master"}
